--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tremor/react": "^3.13.4",
     "@upstash/redis": "^1.28.3",
     "date-fns": "^3.3.1",
     "next": "14.1.0",
